Fix white space on right side of navbar on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -175,9 +175,10 @@ nav {
     right: 0;
     z-index: 100;
     /* Ensure header spans full width including scrollbar */
-    margin: 0;
+    margin-left: calc(-1 * (100vw - 100%)/2);
+    margin-right: calc(-1 * (100vw - 100%)/2);
     width: 100vw;
-    max-width: 100%;
+    max-width: 100vw;
     box-sizing: border-box;
   }
 }
